<resources>
    <string name="app_name">BluetoothApp</string>
    <string name="connect">Connect</string>
    <string name="makeDiscoverable">Make Discoverable</string>
    <string name="discover">Discover</string>
    <string name="massageText">Message text</string>
    <string name="send">Send</string>
    <string name="incomingMassage">Incoming Messages</string>
    <string name="device">Paired devices</string>
    <string name="battleships">Battleships</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
